--- a/package.json
+++ b/package.json
@@ -24,10 +24,9 @@
   ],
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "@actions/core": "^1.9.0"
-  },
   "devDependencies": {
+    "@actions/core": "^1.9.0",
+    "@actions/github": "^5.0.3",
     "@types/node": "^16.10.5",
     "@typescript-eslint/parser": "^5.8.1",
     "@vercel/ncc": "^0.34.0",
