--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-jest": "^26.5.3",
     "jest": "^28.1.1",
     "js-yaml": "^4.1.0",
+    "node-fetch": "^3.2.6",
     "prettier": "2.7",
     "ts-jest": "^28.0.5",
     "typescript": "4.7"
