--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,4 +21,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./
         with:
-          github-token: ${{ secret.ACTION_PAT }}
+          github-token: ${{ secrets.ACTION_PAT }}
