--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,3 +21,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./
+        with:
+          issue-regex-match: '(AB#[0-9]+)'
+          composer-lock-glob: '*composer.lock'
