--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@actions/core": "^1.9.0",
     "@actions/github": "^5.0.3",
+    "@types/minimatch": "^3.0.5",
     "@types/node": "^16.10.5",
     "@typescript-eslint/parser": "^5.8.1",
     "@vercel/ncc": "^0.34.0",
@@ -38,5 +39,8 @@
     "prettier": "2.7",
     "ts-jest": "^28.0.5",
     "typescript": "4.7"
+  },
+  "dependencies": {
+    "minimatch": "^5.1.0"
   }
 }
