feat: add option to fail if no issue (#11)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,3 +24,4 @@ jobs:
         with:
           issue-regex-match: '(AB#[0-9]+)'
           composer-lock-glob: '**/composer.lock'
+          fail-if-no-issues: 'false'
